liberty/yaml/ingress-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "liberty-debug"
    ingress-liberty/backend-entity: "deployment"
    kubernetes.io/tls-acme: "true"
    ingress-liberty/mode: "tls-acme"
    ingress-liberty/backend: "1"
  name: ingress-test
  namespace: default
spec:
  rules:
  - host: www.test.es
    http:
      paths:
      - backend:
          serviceName: test
          servicePort: 80
        path: /
  tls:
  - hosts:
    - www.test.es
    secretName: test-tls-nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test2
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "liberty-debug"
    kubernetes.io/tls-acme: "true"
    ingress-liberty/mode: "tls-acme"
    ingress-liberty/backend: "1"
spec:
  tls:
  - hosts:
    - test2.com
    secretName: test2-com-tls
  - hosts:
    - www.test2.com
    secretName: wwwtest2-com-tls
  - hosts:
    - test2.es
    secretName: test2-es-tls
  - hosts:
    - www.test2.es
    secretName: wwwtest2-es-tls
  rules:
  - host: test2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test2
          servicePort: 80
      - path: /
        backend:
          serviceName: test2
          servicePort: 443
  - host: www.test2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test2
          servicePort: 80
      - path: /
        backend:
          serviceName: test2
          servicePort: 443
  - host: test2.es
    http:
      paths:
      - path: /
        backend:
          serviceName: test2
          servicePort: 80
      - path: /
        backend:
          serviceName: test2
          servicePort: 443
  - host: www.test2.es
    http:
      paths:
      - path: /
        backend:
          serviceName: test2
          servicePort: 80
      - path: /
        backend:
          serviceName: test2
          servicePort: 443
